// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        type="submit"
      >
        Search
      </button>
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
    </form>
  </div>
  <div>
    <div
      className="table"
    />
    <div
      className="interactions"
    >
      <button
        className=""
        onClick={[Function]}
      >
        More stories
      </button>
    </div>
  </div>
</div>
`;

exports[`Button should match snapshot 1`] = `
<button
  className=""
>
  Button
</button>
`;

exports[`Search should match snapshot 1`] = `
<form>
  <button
    type="submit"
  >
    Search
  </button>
  <input
    type="text"
  />
</form>
`;

exports[`Table should match snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      y
    </span>
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
     
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
      >
        Remove
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      z
    </span>
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
     
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
      >
        Remove
      </button>
    </span>
  </div>
</div>
`;
